[Feature #165020124] Test CRUD operations on articles
